sync update
