# src/models/index.js
@@ -3,7 +3,11 @@ const Department = require("./Department");
 const Category = require("./Category");
 const SubCategory = require("./SubCategory");
 const Product = require("./Product");
+const ProductImage = require("./ProductImage");
 const SyncState = require("./SyncState");
+
+Product.hasMany(ProductImage, { foreignKey: "prod_code", sourceKey: "prod_code", as: "images" });
+ProductImage.belongsTo(Product, { foreignKey: "prod_code", targetKey: "prod_code", as: "product" });
 
 module.exports = {
   sequelize,
@@ -11,5 +15,6 @@ module.exports = {
   Category,
   SubCategory,
   Product,
+  ProductImage,
   SyncState
 };
